<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.geeteshk.polyide.ConfigureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_preview"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_preview"
            android:text="Preview"
            android:textColor="?attr/colorAccent" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?android:attr/endColor"
            app:cardCornerRadius="2dp">

            <WebView
                android:id="@+id/project_configure_preview"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#23000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_storage"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_storage"
            android:text="Storage"
            android:textColor="?attr/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total" />

            <TextView
                android:id="@+id/project_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_text"
                android:text="0.00 MB"
                android:textSize="48sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#23000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_elements"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_elements"
            android:text="Elements"
            android:textColor="?attr/colorAccent" />

        <LinearLayout
            android:id="@+id/elements_configure_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="56dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/add_element"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_element" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#23000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_alert_warning"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_alert_warning"
            android:text="Danger Zone"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="56dp"
            android:text="@string/delete_project_warning"
            android:textColor="#f44336"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="56dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/project_delete_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/delete_project" />

            <ImageButton
                android:id="@+id/project_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_action_delete" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#23000000" />

    </LinearLayout>

</ScrollView>
